gcc/testsuite/sarif-replay.dg/2.1.0-invalid/3.11.11-missing-arguments-for-placeholders.sarif
{
  "version": "2.1.0",
  "runs": [{
    "tool": { "driver": { "name": "example" } },
    "results": [
      { "message": { "text" : "the {0} {1} fox jumps over the {2} dog" } } /* { dg-error "message string contains placeholder '\\{0\\}' but message object has no 'arguments' property \\\[SARIF v2.1.0 ยง3.11.11\\\]" } */
    ]
  }]
}

/* { dg-begin-multiline-output "" }
    6 |       { "message": { "text" : "the {0} {1} fox jumps over the {2} dog" } }
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   { dg-end-multiline-output "" }  */
